Fixing layout of search button on mobile.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,7 @@ p {
     height: 2rem !important;
     background-color: transparent;
     border: none;
+    margin-left: -1rem;
 }
 
 #city-name {
